# CMakeTemplate

./: .CMakeLists.txt.swp  .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  SPOONConfig.h.in  build.sh  configure.sh  main.cpp  run.sh
.cache/clangd/index/: SPOONConfig.h.9980E8A4D66DE671.idx  adder.cpp.41D226D940C68DD3.idx  adder.cpp.5A7E4132715C2721.idx  adder.h.C67D13A6A8F1DD4A.idx  adder.h.F60C4E8F2E6F0238.idx  context.c.F5DD46A3423A8946.idx  egl_context.c.C9D809DB90CFB9AB.idx  glfw3.h.7EDCF5537D617802.idx  glx_context.c.FE88C2B4BEC3CC07.idx  init.c.F36424CF0D1E8283.idx  input.c.B8A3F64A1A00A516.idx  internal.h.DE17C262C800371E.idx  linux_joystick.c.6227ABBF71D2DCBA.idx  linux_joystick.h.1BFAAD7CA6D3D831.idx  main.cpp.59D4E72DC57DCB17.idx  mappings.h.57A1B67634264ADB.idx  monitor.c.6FDC31BC50201EC7.idx  null_init.c.8EC07540CE7E7A77.idx  null_joystick.c.E0E596B60D1B0A55.idx  null_joystick.h.FDB962E953716B92.idx  null_monitor.c.8B1896186828CF68.idx  null_platform.h.901C32D59ACFFA81.idx  null_window.c.15E86800F58E35E8.idx  osmesa_context.c.8CF09A49EC606591.idx  platform.c.B6A9F33CF51C6625.idx  platform.h.A9E64FBDF9FD8CF2.idx  posix_module.c.4348F94741139DDE.idx  posix_thread.c.631D2A7FF537BBBE.idx  posix_thread.h.2B46E4391663C5D1.idx  posix_time.c.F72EC8B798702557.idx  posix_time.h.F843166B3C4DDA1D.idx  vulkan.c.8C2B83F42F7BA724.idx  window.c.FCFD6098A1774336.idx  x11_init.c.D1CBF2FC386715A1.idx  x11_monitor.c.86CF12A17F0E5955.idx  x11_platform.h.741E4247EE5635ED.idx  x11_window.c.764D9D2B9E4AE545.idx  xkb_unicode.c.8D25C2A130436E4D.idx  xkb_unicode.h.C437ABEB5824315F.idx
Adder/: adder.cpp
lib/adder/: adder.h
